# gamegg-data

./: .gitignore  README.md  pyproject.toml
tests/: test_gamegg_data.py
