[tool.poetry]
name = "gamegg_data"
version = "0.1.0"
description = ""
authors = ["Dongkey-Dev <dongkeydev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.79.0"
SQLAlchemy = "^1.4.39"
uvicorn = "^0.18.2"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
